feat(sibyl): Add REST API and web UI for knowledge graph management
Introduce a FastAPI REST API alongside the existing MCP server and a
Next.js web frontend for visual knowledge graph exploration.

REST API (/api/*):
- Entity CRUD with filtering and pagination
- Semantic search and graph exploration endpoints
- Graph visualization data (nodes, edges, subgraph traversal)
- Admin endpoints for health, stats, and document ingestion
- WebSocket support for real-time updates

Web UI (Next.js + TailwindCSS):
- Dashboard with server health and entity statistics
- Entity browser with type/language/category filters
- Interactive graph visualization
- Search interface with semantic queries
- Document ingestion with progress tracking

Backend changes:
- Combined Starlette app hosts MCP at /mcp and API at /api/*
- Extended entity and relationship managers for API needs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,10 @@ dependencies = [
     "graphiti-core[falkordb]>=0.5",
     # Async support
     "anyio>=4.0",
-    # HTTP server (for streamable-http transport)
-    "uvicorn>=0.32.0",
+    # HTTP server
+    "uvicorn[standard]>=0.32.0",
     "starlette>=0.41.0",
+    "fastapi>=0.115.0",
     # Data validation
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
