--- a/pyproject.toml
+++ b/pyproject.toml
@@ -269,5 +269,8 @@ reportCallIssue = "warning"            # Track API misuse
 [dependency-groups]
 dev = [
     "pyright>=1.1.407",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "ruff>=0.14.9",
 ]
