--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,13 +26,13 @@ classifiers = [
 ]
 dependencies = [
     # MCP Protocol
-    "mcp>=1.0.0",
+    "mcp>=1.25",
     # Knowledge Graph
-    "graphiti-core[falkordb]>=0.5",
+    "graphiti-core[falkordb]>=0.24",
     # Async support
     "anyio>=4.0",
     # HTTP server
-    "uvicorn[standard]>=0.32.0",
+    "uvicorn[standard]>=0.38",
     "starlette>=0.41.0",
     "fastapi>=0.115.0",
     # Data validation
@@ -49,8 +49,17 @@ dependencies = [
 
 [project.optional-dependencies]
 generator = [
-    "anthropic>=0.40.0",
+    "anthropic>=0.75",
     "faker>=30.0",
+]
+graphrag = [
+    "networkx>=3.0",
+    "python-louvain>=0.16",  # Louvain community detection
+]
+graphrag-leiden = [
+    "networkx>=3.0",
+    "leidenalg>=0.10",  # Leiden algorithm (better than Louvain)
+    "igraph>=0.11",
 ]
 dev = [
     "pytest>=8.0",
