feat(graph): Add configurable LLM provider support for entity extraction
Allow users to choose between OpenAI and Anthropic for LLM-powered
entity extraction in the knowledge graph.

Add llm_provider setting (openai/anthropic) and llm_model configuration
with Anthropic Claude Haiku as the new default. The GraphClient now
creates the appropriate LLM client based on settings and passes it to
Graphiti, while OpenAI remains available for embeddings regardless of
the LLM provider choice.

Include graphiti-core[anthropic] dependency for Anthropic support.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     # MCP Protocol
     "mcp>=1.25",
     # Knowledge Graph
-    "graphiti-core[falkordb]>=0.24",
+    "graphiti-core[falkordb,anthropic]>=0.24",
     # Async support
     "anyio>=4.0",
     # HTTP server
