--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "nuqs": "^2.8.5",
     "react": "19.2.3",
