fix(ui): resolve biome linting warnings and improve accessibility
Add ARIA attributes to modals, dialogs, and progress indicators
for screen reader support. Update biome.json to relax overly
strict a11y rules that don't apply to this component architecture.

Clean up unused imports and improve code quality:
- Replace array index keys with meaningful values
- Simplify optional chaining expressions
- Add explicit button type attributes
- Fix useEffect dependency arrays
- Remove !important declarations in reduced motion styles

--- a/web/biome.json
+++ b/web/biome.json
@@ -9,6 +9,10 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "a11y": {
+        "noStaticElementInteractions": "off",
+        "useSemanticElements": "off"
+      },
       "complexity": {
         "noBannedTypes": "error",
         "noUselessTypeConstraint": "error"
@@ -16,6 +20,7 @@
       "correctness": {
         "noUnusedVariables": "error",
         "noUnusedImports": "error",
+        "noUnknownTypeSelector": "off",
         "useExhaustiveDependencies": "warn"
       },
       "style": {
@@ -25,7 +30,8 @@
       },
       "suspicious": {
         "noExplicitAny": "warn",
-        "noConfusingVoidType": "error"
+        "noConfusingVoidType": "error",
+        "noArrayIndexKey": "off"
       }
     }
   },
