--- a/web/package.json
+++ b/web/package.json
@@ -13,13 +13,21 @@
     "generate:types": "openapi-typescript http://localhost:3334/api/openapi.json -o src/lib/api-types.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.12",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.562.0",
+    "motion": "^12.23.26",
     "next": "16.1.0",
     "nuqs": "^2.8.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "reagraph": "^4.30.7",
+    "sonner": "^2.0.7",
     "zod": "^4.2.1"
   },
   "devDependencies": {
