feat(db): add PostgreSQL document storage with pgvector
Add PostgreSQL infrastructure for storing crawled documentation with
vector embeddings for semantic search.

New database module includes:
- CrawlSource: tracks documentation sources and crawl configuration
- CrawledDocument: stores raw content with metadata extraction
- DocumentChunk: stores chunked content with 1536-dim embeddings

Vector search uses HNSW indexing for cosine similarity and GIN
indexing for full-text BM25 search, enabling hybrid retrieval.

Also adds:
- Alembic migrations with initial schema
- PostgreSQL service in docker-compose (pgvector/pgvector:pg18)
- Async connection pooling via SQLAlchemy 2.0 + asyncpg
- Configuration for PostgreSQL in Settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,24 @@ services:
       retries: 5
     restart: unless-stopped
 
+  postgres:
+    image: pgvector/pgvector:pg18
+    container_name: sibyl-postgres
+    ports:
+      - "5433:5432"  # Mapped to 5433 to avoid conflicts
+    volumes:
+      - postgres_data:/var/lib/postgresql  # pg18+ uses subdirectory structure
+    environment:
+      POSTGRES_USER: ${SIBYL_POSTGRES_USER:-sibyl}
+      POSTGRES_PASSWORD: ${SIBYL_POSTGRES_PASSWORD:-sibyl_dev}
+      POSTGRES_DB: ${SIBYL_POSTGRES_DB:-sibyl}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${SIBYL_POSTGRES_USER:-sibyl} -d ${SIBYL_POSTGRES_DB:-sibyl}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
 volumes:
   falkordb_data:
+  postgres_data:
