--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "alembic>=1.17.2",
     "greenlet>=3.3.0",
     "crawl4ai>=0.7.8",
+    "arq>=0.26.3",
 ]
 
 [project.optional-dependencies]
