chore(config): update FalkorDB browser port mapping
Change host port from 3001 to 3335 for the FalkorDB Browser UI
to avoid conflicts with other services and maintain consistency
with Sibyl's port numbering scheme (server at 3334).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: sibyl-falkordb
     ports:
       - "6380:6379"  # Redis port (mapped to 6380 to avoid gradial-redis conflict)
-      - "3001:3000"  # FalkorDB Browser UI (mapped to 3001 to avoid conflicts)
+      - "3335:3000"  # FalkorDB Browser UI
     volumes:
       - falkordb_data:/data
     environment:
