refactor(graph): use organization ID as graph identifier
Replace per-organization graph_name configuration with organization ID
as the FalkorDB graph identifier. This simplifies multi-tenancy by
deriving the graph name directly from the org UUID.

Additional changes:
- Add disable_auth setting for development mode
- Add access log middleware for HTTP request tracing
- Make arq worker embedding optional via embed_worker flag
- Use deterministic job IDs to prevent duplicate crawl/sync jobs
- Fix Python 3.14+ compatibility with explicit event loop creation
- Handle auth failures gracefully in dashboard SSR

--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "^1.0.0",
     "openapi-typescript": "^7.10.1",
     "tailwindcss": "^4",
     "typescript": "^5"
