--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.12",
     "cmdk": "^1.1.1",
+    "d3-force": "^3.0.0",
     "iconoir-react": "^7.11.0",
     "motion": "^12.23.26",
     "next": "16.1.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
     "@tailwindcss/postcss": "^4",
+    "@types/d3-force": "^3.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
