ci(web): add Next.js build cache
Cache the .next/cache directory between CI runs to speed up frontend
builds. Uses a cascading key strategy based on lockfile and source
hashes for optimal cache hits.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,15 @@ jobs:
         run: pnpm install --frozen-lockfile
         working-directory: web
 
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: web/.next/cache
+          key: nextjs-${{ runner.os }}-${{ hashFiles('web/pnpm-lock.yaml') }}-${{ hashFiles('web/src/**/*') }}
+          restore-keys: |
+            nextjs-${{ runner.os }}-${{ hashFiles('web/pnpm-lock.yaml') }}-
+            nextjs-${{ runner.os }}-
+
       - name: Frontend lint
         run: pnpm lint
         working-directory: web
