feat(api): add sync mode for entity creation
Add sync parameter to entity creation endpoint that bypasses the
background worker queue. This ensures entities are immediately
available for dependent operations like task workflow transitions.

- Add sync query param to POST /entities endpoint
- Handle EntityNotFoundError in task workflow endpoints
- Add --sync flag to CLI task create command
- Default E2E tests to sync mode for reliability
- Start background worker in CI pipeline
- Remove pytest.skip workarounds from E2E task tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,6 +166,12 @@ jobs:
           # Verify health endpoint returns success
           curl -s http://localhost:3334/api/health | head -c 200
 
+      - name: Start background job worker
+        run: |
+          uv run sibyl worker &
+          echo "Background job worker started"
+          sleep 2
+
       - name: Start frontend server
         run: |
           cd web
