feat(graph): add mock LLM client for CI testing
Introduce MockLLMClient that returns valid empty responses, allowing
Graphiti workflows to complete without API calls. The mock client
implements the LLMClient interface and introspects Pydantic response
models to return appropriate empty values for each field type.

Enable via SIBYL_MOCK_LLM=true environment variable. Integrated into
CI workflow for E2E tests to eliminate dependency on real API keys.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,8 @@ jobs:
       SIBYL_POSTGRES_DB: sibyl_ci
       SIBYL_OPENAI_API_KEY: sk-test-key
       SIBYL_ANTHROPIC_API_KEY: sk-ant-test-key
+      # Use mock LLM for E2E tests (no real API calls)
+      SIBYL_MOCK_LLM: true
 
     steps:
       - uses: actions/checkout@v6
