refactor(infra): consolidate URL config and extract Tiltfile manifests
Simplify infrastructure configuration for local development:

- Add public_url setting as single source of truth for OAuth callbacks
  and redirects, with server_url/frontend_url derived automatically
- Extract inline YAML from Tiltfile to dedicated files:
  - infra/local/cert-manager.yaml (TLS issuer and certificate)
  - infra/local/falkordb.yaml (StatefulSet with password auth)
  - infra/local/Caddyfile (reverse proxy with automatic local TLS)
- Add worker deployment template to Helm chart with proper labels,
  security context, and secret references
- Replace direct Kong gateway access with Caddy proxy via port-forward
  for simpler local TLS termination on sibyl.local
- Enable FalkorDB password authentication in local dev environment
- Make configmap generation dynamic using range over backend.env
- Set manual trigger mode for application deployments in Tilt
- Parallelize infrastructure resource dependencies where possible

--- a/charts/sibyl/templates/configmap.yaml
+++ b/charts/sibyl/templates/configmap.yaml
@@ -6,13 +6,9 @@ metadata:
     {{- include "sibyl.labels" . | nindent 4 }}
 data:
   # Backend configuration
-  SIBYL_SERVER_HOST: {{ .Values.backend.env.SIBYL_SERVER_HOST | quote }}
-  SIBYL_SERVER_PORT: {{ .Values.backend.env.SIBYL_SERVER_PORT | quote }}
-  SIBYL_ENVIRONMENT: {{ .Values.backend.env.SIBYL_ENVIRONMENT | quote }}
-  SIBYL_LLM_PROVIDER: {{ .Values.backend.env.SIBYL_LLM_PROVIDER | quote }}
-  SIBYL_LLM_MODEL: {{ .Values.backend.env.SIBYL_LLM_MODEL | quote }}
-  SIBYL_EMBEDDING_MODEL: {{ .Values.backend.env.SIBYL_EMBEDDING_MODEL | quote }}
-  SIBYL_EMBEDDING_DIMENSIONS: {{ .Values.backend.env.SIBYL_EMBEDDING_DIMENSIONS | quote }}
+  {{- range $key, $value := .Values.backend.env }}
+  {{ $key }}: {{ $value | quote }}
+  {{- end }}
   # Database connection (non-secret values, or fallbacks if not using existingSecret)
   {{- if not .Values.backend.database.existingSecret }}
   SIBYL_POSTGRES_HOST: {{ .Values.backend.database.host | quote }}
