--- a/infra/local/kong/gateway.yaml
+++ b/infra/local/kong/gateway.yaml
@@ -1,5 +1,6 @@
 # Kong Gateway instance for Sibyl
 # DataPlane runs in kong namespace, routes traffic to sibyl namespace
+# TLS is terminated by Caddy locally, Kong handles HTTP only
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
@@ -14,15 +15,3 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
-    - name: https
-      protocol: HTTPS
-      port: 443
-      hostname: sibyl.local
-      allowedRoutes:
-        namespaces:
-          from: All
-      tls:
-        mode: Terminate
-        certificateRefs:
-          - name: sibyl-local-tls
-            kind: Secret
