--- a/charts/sibyl/templates/worker-deployment.yaml
+++ b/charts/sibyl/templates/worker-deployment.yaml
@@ -1,23 +1,24 @@
+{{- if .Values.worker.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "sibyl.fullname" . }}-backend
+  name: {{ include "sibyl.fullname" . }}-worker
   labels:
-    {{- include "sibyl.backend.labels" . | nindent 4 }}
+    {{- include "sibyl.worker.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.backend.replicaCount }}
+  replicas: {{ .Values.worker.replicaCount }}
   selector:
     matchLabels:
-      {{- include "sibyl.backend.selectorLabels" . | nindent 6 }}
+      {{- include "sibyl.worker.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
-        {{- with .Values.backend.podAnnotations }}
+        {{- with .Values.worker.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
       labels:
-        {{- include "sibyl.backend.labels" . | nindent 8 }}
+        {{- include "sibyl.worker.labels" . | nindent 8 }}
     spec:
       {{- with .Values.global.imagePullSecrets }}
       imagePullSecrets:
@@ -25,53 +26,14 @@ spec:
       {{- end }}
       serviceAccountName: {{ include "sibyl.serviceAccountName" . }}
       securityContext:
-        {{- toYaml .Values.backend.podSecurityContext | nindent 8 }}
-      initContainers:
-        - name: migrate
-          image: {{ include "sibyl.backend.image" . }}
-          imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
-          command: ["alembic", "upgrade", "head"]
-          envFrom:
-            - configMapRef:
-                name: {{ include "sibyl.fullname" . }}-config
-          env:
-            {{- if .Values.backend.database.existingSecret }}
-            - name: SIBYL_POSTGRES_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.backend.database.existingSecret }}
-                  key: host
-            - name: SIBYL_POSTGRES_PORT
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.backend.database.existingSecret }}
-                  key: port
-            - name: SIBYL_POSTGRES_DB
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.backend.database.existingSecret }}
-                  key: dbname
-            - name: SIBYL_POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.backend.database.existingSecret }}
-                  key: username
-            - name: SIBYL_POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ .Values.backend.database.existingSecret }}
-                  key: password
-            {{- end }}
+        {{- toYaml .Values.worker.podSecurityContext | nindent 8 }}
       containers:
-        - name: backend
+        - name: worker
           securityContext:
-            {{- toYaml .Values.backend.securityContext | nindent 12 }}
+            {{- toYaml .Values.worker.securityContext | nindent 12 }}
           image: {{ include "sibyl.backend.image" . }}
           imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 3334
-              protocol: TCP
+          command: ["sibyl", "worker"]
           envFrom:
             - configMapRef:
                 name: {{ include "sibyl.fullname" . }}-config
@@ -96,7 +58,6 @@ spec:
                   optional: true
             {{- end }}
             {{- if .Values.backend.database.existingSecret }}
-            # Pull all database connection info from CNPG-generated secret
             - name: SIBYL_POSTGRES_HOST
               valueFrom:
                 secretKeyRef:
@@ -123,7 +84,6 @@ spec:
                   name: {{ .Values.backend.database.existingSecret }}
                   key: password
             {{- end }}
-            # FalkorDB password from existing secret or auto-generated
             - name: SIBYL_FALKORDB_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -134,27 +94,24 @@ spec:
                   name: {{ include "sibyl.fullname" . }}-falkordb
                   key: password
                   {{- end }}
-          livenessProbe:
-            {{- toYaml .Values.backend.livenessProbe | nindent 12 }}
-          readinessProbe:
-            {{- toYaml .Values.backend.readinessProbe | nindent 12 }}
           resources:
-            {{- toYaml .Values.backend.resources | nindent 12 }}
+            {{- toYaml .Values.worker.resources | nindent 12 }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
       volumes:
         - name: tmp
           emptyDir: {}
-      {{- with .Values.backend.nodeSelector }}
+      {{- with .Values.worker.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.backend.affinity }}
+      {{- with .Values.worker.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.backend.tolerations }}
+      {{- with .Values.worker.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end }}
