--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -224,10 +224,11 @@ ignore = [
 [tool.ruff.lint.per-file-ignores]
 "alembic/**/*.py" = ["ERA001", "INP001"]
 "examples/**/*.py" = ["BLE001", "PLR0915", "T201", "TRY002"]
-"src/sibyl/cli/**/*.py" = ["T201"]
+"src/sibyl/cli/**/*.py" = ["S110", "T201"]
+"src/sibyl/config.py" = ["S104"]
 "tests/**/*.py" = [
-    "ARG001", "B017", "ERA001", "N806", "PERF401",
-    "PLR2004", "PT011", "S101", "SIM105", "SLF001",
+    "ARG001", "ARG005", "B017", "ERA001", "N806", "PERF401",
+    "PLR2004", "PT011", "S101", "S105", "S106", "SIM105", "SLF001",
 ]
 
 [tool.ruff.lint.isort]
