--- a/moon.yml
+++ b/moon.yml
@@ -7,6 +7,42 @@ type: configuration
 
 tasks:
   # ==========================================================================
+  # Development
+  # ==========================================================================
+  dev:
+    command: 'docker compose up -d && sleep 1 && npx concurrently --kill-others-on-fail -n "api,web" -c "magenta,cyan" "moon run api:serve" "moon run web:dev"'
+    local: true
+    options:
+      persistent: true
+
+  dev-api:
+    command: |
+      docker compose up -d
+      sleep 1
+      moon run api:serve
+    local: true
+    options:
+      persistent: true
+      shell: true
+
+  dev-web:
+    command: 'moon run web:dev'
+    local: true
+    options:
+      persistent: true
+
+  stop:
+    command: |
+      echo "🛑 Stopping Sibyl services..."
+      pkill -f "sibyl-serve" 2>/dev/null || true
+      pkill -f "next dev" 2>/dev/null || true
+      docker compose down
+      echo "✓ All services stopped"
+    local: true
+    options:
+      shell: true
+
+  # ==========================================================================
   # Docker
   # ==========================================================================
   docker-up:
