refactor(cli): simplify uv tool install paths and fix import order
Replace subshell directory changes with direct path arguments for uv tool
install commands in moon.yml. This is cleaner and avoids unnecessary shell
process spawning.

Also fix import ordering in manage.py to follow Python style guidelines
(stdlib imports before third-party) and consolidate a multi-line SQLAlchemy
query onto a single line.

--- a/moon.yml
+++ b/moon.yml
@@ -75,9 +75,9 @@ tasks:
   install:
     command: |
       echo "Installing sibyl CLI..."
-      (cd apps/cli && uv tool install . --force)
+      uv tool install ./apps/cli --force
       echo "Installing sibyld daemon..."
-      (cd apps/api && uv tool install . --force)
+      uv tool install ./apps/api --force
       echo "Installing skills..."
       mkdir -p ~/.claude/skills ~/.codex/skills
       rm -rf ~/.claude/skills/sibyl-knowledge ~/.claude/skills/sibyl-project-manager
@@ -94,9 +94,9 @@ tasks:
   install-dev:
     command: |
       echo "Installing sibyl CLI (editable)..."
-      (cd apps/cli && uv tool install . --editable --force)
+      uv tool install ./apps/cli --editable --force
       echo "Installing sibyld daemon (editable)..."
-      (cd apps/api && uv tool install . --editable --force)
+      uv tool install ./apps/api --editable --force
       echo "Installing skills..."
       mkdir -p ~/.claude/skills ~/.codex/skills
       rm -rf ~/.claude/skills/sibyl-knowledge ~/.claude/skills/sibyl-project-manager
