refactor(hooks): simplify claude code hooks
Remove PostToolUse and Stop hooks that auto-logged file changes and
session markers to Sibyl. These added noise to the knowledge graph
without providing actionable value.

Simplify session-start hook to show minimal active tasks without
colored output or pattern fetching. Update STOP_WORDS list with
alphabetical ordering and additional terms.

Reformat moon.yml shell commands to single-line format.

--- a/hooks/moon.yml
+++ b/hooks/moon.yml
@@ -27,21 +27,13 @@ tasks:
     local: true
 
   install:
-    command: |
-      echo "Installing Claude Code hooks..."
-      mkdir -p ~/.claude/hooks/sibyl
-      cp *.py ~/.claude/hooks/sibyl/
-      chmod +x ~/.claude/hooks/sibyl/*.py
-      python3 configure.py
-      echo "✓ Hooks installed - restart Claude Code to activate"
+    command: "echo 'Installing Claude Code hooks...' && mkdir -p ~/.claude/hooks/sibyl && cp ./*.py ~/.claude/hooks/sibyl/ && chmod +x ~/.claude/hooks/sibyl/*.py && python3 configure.py && echo '✓ Hooks installed - restart Claude Code to activate'"
     local: true
     options:
       shell: true
 
   uninstall:
-    command: |
-      rm -rf ~/.claude/hooks/sibyl
-      echo "✓ Removed Sibyl hooks (settings.json unchanged - edit manually if needed)"
+    command: "rm -rf ~/.claude/hooks/sibyl && echo '✓ Removed Sibyl hooks (settings.json unchanged - edit manually if needed)'"
     local: true
     options:
       shell: true
